--- a/myblog/LIST/框架以及自动化工具.md
+++ b/myblog/LIST/框架以及自动化工具.md
@@ -124,6 +124,19 @@ module.exports = {
 ```
 **loader有能力处理文件内容中未被解析的 `require()`**
 也可以将其放到下一个loader中处理，然而css-loader会做这件事，其实并不是它自己处理，只是调用loader的api。
+#### loader和plugins的区别
+
+loader负责的功能：
+1. 处理样式，转成css，eg:`less-loader`
+2. 图片处理，eg:`url-loader`,`file-loader`
+3. 处理js，将es6转换为es5
+4. 将js暴露在全局
+
+plugins
+1. 代码热替换
+2. 生成html文件：HtmlWebpackPlugins
+3. 生成非内联css文件：ExtractTextPlugin
+4. 压缩合并文件
 
 ## webpack 和gulp的区别
 1. gulp是一种工具，能够优化前端的工作流程，比如刷新页面，压缩文件，编译less等
