--- a/myblog/LIST/操作系统.md
+++ b/myblog/LIST/操作系统.md
@@ -7,3 +7,84 @@
 线程基本上不拥有系统资源，只是拥有一些必不可少的资源(程序计数器，一组计数器和栈)，但是它可以与同属于一个进程的其他线程共享拥有的全部资源。一个进程可以创建和撤销线程，线程可以并发的执行。
 
 操作系统引入进程是为了*提高程序并发执行*来提高资源`利用率`和`吞吐量`
+
+### 进程和线程的区别
+
+1. 进程在执行过程中拥有独立的内存单元，而多线程共享内存，从而极大的提高了程序的运行效率
+2. 进程有独立的地址空间，一个进程崩溃后在保护模式下不会对其他进程产生影响，而线程只是进程中的不同执行路径，一个线程死掉整个进程就死掉了，所以多进程比多线程强壮
+
+## 进程间的通信
+
+### 进程通信的目的
+
+- 数据传输
+	+ 一个进程需要将他的数据发送给另一个进程，发送的数据量在一个字节到几M之间
+- 共享数据
+	+ 多个进程想要操作数据，一个进程共享数据
+- 通知
+	+ 一个进程需要向另一个组或者进程发送消息，通知它(们)发送某种事件(进程终止时通知父进程)
+- 资源共享
+	+ 多个进程之间共享同样的资源。为了做到这一点需要内核提供锁和同步机制
+- 进程控制
+	+ 有些进程希望完全控制另一个进程的执行（如Debug进程），此时控制进程希望能够拦截另一个进程的所有陷入和异常，并能够及时知道它的状态改变
+
+### 进程间通信的方式
+
+1. 管道(pipe),流管道(s_pipe),有名管道(name_pipe)
+	+ 管道通信有两种限制，一种是半双工通信，数据只能单向流动，二是只能在具有亲缘关系的进程间使用(父子进程)
+	+ s_pipe：去除了第一种限制，可以双向传输
+	+ name_pipe：除了管道具有的功能外，还允许无亲缘关系的进程通信
+2. 信号量
+	+ 信号量是一个计数器，可以用来控制多个进程对资源的访问，他作为常见的一种锁机制，防止某进程正在访问共享资源时，其他资源访问该资源。
+	+ 主要作为进程间以及同一个进程不同线程之间的同步手
+3. 消息队列
+	+ 消息队列是消息的链表。
+	+ 有足够权限的进程可以向队列中添加消息，被赋予读进程的队列可以读取消息队列中的消息
+	+ 消息队列克服了信号量承载信息少，管道只能承载无格式字节流以及缓冲区大小受限制等条件
+4. 信号
+	+ 用于接受进程某个事件已经发生
+	+ 主要作为进程间以及同一个进程不同线程之间的同步手段
+5. 共享内存
+	+ 就是映射一段能被其他进程所访问的资源，这段资源由一个进程创建，但多个进程可以访问
+6. socket
+	+ 也可以用于不同机器见的通信
+
+
+### 通信方式的区别
+
+|类型| 无连接|可靠|流控制|记录消息类型|优先级|
+|:--:|:--:|:--:|:--:|:--:|:--:|
+|普通PIPE|N|Y|Y||N|
+|流PIPE|N|Y|Y||N|
+|命名PIPE(FIFO)|N|Y|Y||N|
+|消息队列|N|Y|Y||Y|
+|信号量|N|Y|Y||Y|
+|共享存储|N|Y|Y||Y|
+|UNIX流socket|N|Y|Y||N|
+|UNIX数据包socket|NY|Y|N||N|
+
+**注**
+- 无连接：无需调用某种形式的open，就有发送消息的能力流控制
+- 如果系统资源短缺或者不能接受更多的消息，则发送进程能进行流量控制
+
+### 通信方式的优缺点对比
+
+1. 管道： 速度快，容量有限，只有父子进程能够通信
+2. FIFO：任何进程能够通信，但速度慢
+3. 消息队列：容量收到系统限制，且要注意第一次读的时候，要考虑上一次没有读完数据的问题
+4. 信号量：不能用来传递复杂信息，只能用来同步
+5. 共享内存区：能够很容易控制容量，速度快，但要保持同步，比如一个进程在写的时候，另一个进程要注意读写的问题，相当于线程中的线程安全
+
+
+
+	
+
+
+
+
+
+
+	
+
+
+
