--- a/myblog/LIST/操作系统.md
+++ b/myblog/LIST/操作系统.md
@@ -76,8 +76,33 @@
 5. 共享内存区：能够很容易控制容量，速度快，但要保持同步，比如一个进程在写的时候，另一个进程要注意读写的问题，相当于线程中的线程安全
 
 
+##死锁的产生条件和预防
 
-	
+### 产生死锁的条件
+
+1. 互斥条件：一个资源在一段时间内只能由一个进程占用，如果这个时候其他资源进行请求，只能进行等待
+2. 占有并等待条件：进程已经占有资源，但是还是需要一个资源这个资源被另一个资源占用，这个时候请求进程阻塞，但又对自己获得的资源保持不放
+3. 不剥夺条件：进程占用的资源，在未使用完之前不能被剥夺
+4. 环路等待：A进程等待被占有的资源，B进程等待A进程占有的资源
+
+### 死锁的预防
+
+1. 破坏占有并等待条件
+	+ 每个进程必须一次性的请求它需要的所有资源，若无法全部获取就等待
+2. 破坏不可剥夺条件
+	+ 一个占有资源的进程若要申请新的进程，必须先释放已占有的资源
+3. 破坏循环等待条件
+	+ 将系统中所有的资源设置标志位，然后排序，规定所有的进程申请资源必须以一定的顺序进行操作
+
+### 死锁的避免
+
+1. 如果一个进程请求的资源会导致死锁，就不会启动该进程
+2. 如果一个资源的分配会导致下一步死锁，系统就拒绝本次的分配
+
+
+
+
+
 
 
 
